This commit creates the pages

--- a/shoestore/templates/registration/signUp.html
+++ b/shoestore/templates/registration/signUp.html
@@ -1,4 +1,4 @@
-{% extends 'register/reg_base.html' %}
+{% extends 'registration/reg_base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
 <style>
