--- a/shoestore/templates/index.html
+++ b/shoestore/templates/index.html
@@ -1,5 +1,31 @@
 {%extends 'base.html'%}
 {% block content %}
 {{block.super}}
-<h1>This is home</h1>
+<div class="container">
+    <div class="row">
+        {% for item in object_list %}
+        <div class="col-md-4">
+            <div class="card mb-3">
+                <div class="card-header">
+                    {{item.name}}
+                </div>
+                <div class="card-title">
+                    <div class="view" style="height: 200px; padding:2%;">
+                        <a href="{{item.get_absolute_url}}">
+                           <img src="{{item.image.url}}" width="100%" class="img-responsive" alt="item image">
+                        </a>
+                    </div>
+                </div>
+                <div class="card-footer">
+                    <h4>{{item.get_category_display}}</h4>
+                    <h4>Price: {{item.price}}</h4>
+                    <p class="badge badge-pill {{item.get_label_display}}-color">NEW</p>
+                </div>
+            </div>
+        </div>
+        {% empty %}
+        <p>No items have been posted.</p>
+        {% endfor %}
+    </div>
+</div>
 {% endblock %}
