--- a/shoestore/templates/base.html
+++ b/shoestore/templates/base.html
@@ -22,6 +22,17 @@
 </head>
 <body>
     {% include 'navbar.html' %}
+    {% if messages %}
+    {% for message in messages %}
+    <div class="alert alert-{{ message.tags }} alert-dismissible fade show container" role="alert">
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    {% endfor %}
+    {% endif %}
+
     {% block content %}
     {% endblock %}
     {% block scripts %}
