--- a/shoestore/templates/index.html
+++ b/shoestore/templates/index.html
@@ -1,7 +1,7 @@
 {%extends 'base.html'%}
 {% block content %}
 {{block.super}}
-<div class="container">
+<div class="container mt-4">
     <div class="row">
         {% for item in object_list %}
         <div class="col-md-4">
@@ -10,7 +10,7 @@
                     {{item.name}}
                 </div>
                 <div class="card-title">
-                    <div class="view" style="height: 200px; padding:2%;">
+                    <div class="view overlay zoom" style="height: 200px; padding:2%;">
                         <a href="{{item.get_absolute_url}}">
                            <img src="{{item.image.url}}" width="100%" class="img-responsive" alt="item image">
                         </a>
