--- a/shoestore/templates/navbar.html
+++ b/shoestore/templates/navbar.html
@@ -18,7 +18,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="">Products</a>
+        <a class="nav-link" href=""></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{%url 'checkout'%}">Checkout</a>
