This commit implements a search by category

--- a/shoestore/templates/navbar.html
+++ b/shoestore/templates/navbar.html
@@ -30,9 +30,9 @@
         <a class="nav-link" href=""></a>
       </li>
       <li class="nav-item dropdown">
-          <form class="form-inline navbar-form" role="search" action="">
+          <form class="form-inline navbar-form" role="search" action="{%url 'search'%}">
               <div class="md-form my-0">
-                  <input class="form-control mr-sm-2" type="text" name="" placeholder="Search" aria-label="Search">
+                  <input class="form-control mr-sm-2" type="text" name="category" placeholder="Search" aria-label="Search">
               </div>
           </form>
       </li>
