--- a/shoestore/templates/index.html
+++ b/shoestore/templates/index.html
@@ -12,7 +12,7 @@
                 <div class="card-title">
                     <div class="view overlay zoom" style="height: 200px; padding:2%;">
                         <a href="{{item.get_absolute_url}}">
-                           <img src="{{item.image.url}}" width="100%" class="img-responsive" alt="item image">
+                           <img src="{{item.image.url}}" width="100%" class="img-responsive img-thumbnail" alt="item image">
                         </a>
                     </div>
                 </div>
