--- a/shoestore/templates/navbar.html
+++ b/shoestore/templates/navbar.html
@@ -38,7 +38,7 @@
       </li>
     </ul>
     <ul class="navbar-nav ml-auto nav-flex-icons">
-      {%if user.is_authenticated%}
+      {%if request.user.is_authenticated%}
       <li class="nav-item">
         <a class="nav-link waves-effect waves-light" href="/profile/">
           Welcome {{user.username|capfirst}}
@@ -57,7 +57,7 @@
         </div>
       </li>
       {% endif %} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      {%if user.is_authenticated%}
+      {%if request.user.is_authenticated%}
       <a href="" style="margin-top:4%;">
         <i class="fas fa-shopping-cart" style="color:white; font-size:28px;"></i>
       </a>
