--- a/shoestore/templates/navbar.html
+++ b/shoestore/templates/navbar.html
@@ -1,9 +1,14 @@
+{% load cart_template_tags %}
 <style>
     form {
         margin-left: 60%;
     }
     .nav{
       background-color: #673AB7 !important;
+    }
+    span#span{
+      border-radius:50%;
+      color:white;
     }
 </style>
 <!-- Navbar -->
@@ -59,6 +64,7 @@
       {% endif %} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
       {%if request.user.is_authenticated%}
       <a href="" style="margin-top:4%;">
+        <span class="text-white" id="span" style="height:20px;">{{ request.user|cart_item_count }}</span>
         <i class="fas fa-shopping-cart" style="color:white; font-size:28px;"></i>
       </a>
       &nbsp;&nbsp;&nbsp;&nbsp;
