This commit creates the display order items view and displays items added to cart

--- a/shoestore/templates/index.html
+++ b/shoestore/templates/index.html
@@ -10,7 +10,7 @@
                     {{item.name}}
                 </div>
                 <div class="card-title">
-                    <div class="view overlay zoom" style="height: 200px; padding:2%;">
+                    <div class="view overlay" style="height: 200px; padding:2%;">
                         <a href="{{item.get_absolute_url}}">
                            <img src="{{item.image.url}}" width="100%" class="img-responsive img-thumbnail" alt="item image">
                         </a>
